# server/ShoppingServer.BusinessLogic/Operations/Authentication/CreateAccount/CreateAccountOperation.cs
@@ -18,24 +18,15 @@ namespace ShoppingServer.BusinessLogic.Operations
             // Gerar refresh token (exemplo)
             //var refreshToken = tokenService.GenerateRefreshToken();
 
-            var cookieOptions = new CookieOptions
-            {
-                HttpOnly = true,
-                Secure = true,
-                SameSite = SameSiteMode.Unspecified,
-                Path = "/RefreshAuthentication",
-                Expires = DateTime.UtcNow.AddDays(1)
-            };
-
-            //Response.Cookies.Append("refreshToken", refreshToken, cookieOptions);
-            controller.Response.Cookies.Append("refreshToken", "example-refresh-token-zau-zau", cookieOptions);
-
             //var accessToken = tokenService.GenerateAccessToken(request.Email);
             var accessToken = "example-token";
+            var refreshToken = "example-token";
 
             output.Data = new CreateAccountOperationOutputDto
             {
-                Token = accessToken
+                Token = accessToken,
+                RefreshToken = refreshToken,
+
             };
         }
     }
